--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -27,13 +27,12 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 拦截净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;======================================================================================================================
-ruleset=♾️ 规则之外,[]FINAL
+ruleset=🚀 节点选择,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀 节点选择`select`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🍃 拦截净化`select`[]REJECT
-custom_proxy_group=♾️ 规则之外`select`[]🚀 节点选择
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
