--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -17,11 +17,11 @@ ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;Ⓜ️ 微软服务
 ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+;✈️ 电报信息
+ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-;📲 电报信息
-ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;📢 谷歌FCM。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ;♾️ 规则之外
@@ -34,6 +34,7 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=🎬 外媒`select`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
+custom_proxy_group=✈️ 电报`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
