--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -17,8 +17,10 @@ ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ;Ⓜ️ 微软服务
 ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-;✈️ 电报信息
-ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+;✈️ Telegram
+ruleset=✈️ Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+;🦚 Twitter
+ruleset=🦚 Twitter,https://github.com/ACL4SSR/ACL4SSR/raw/master/Clash/Ruleset/Twitter.list
 ;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -34,7 +36,8 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=🎬 外媒`select`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软`select`[]DIRECT
-custom_proxy_group=✈️ 电报`select`[]DIRECT
+custom_proxy_group=✈️ Telegram`select`[]DIRECT
+custom_proxy_group=🦚 Twitter`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
