--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -18,11 +18,10 @@ ruleset=🐻 特定,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ;Ⓜ️ 微软服务
 ruleset=🐻 特定,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ;======================================================================================================================
-;✈️ 电报
-ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-;======================================================================================================================
 ;🧱 GFW列表。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;✈️ 电报
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ;📢 谷歌FCM。
 ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ;======================================================================================================================
@@ -35,7 +34,6 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ;控制组
 custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=🐻 特定`select`[]DIRECT
-custom_proxy_group=✈️ 电报`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 custom_proxy_group=♾️ 规则之外`select`[]DIRECT
