--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -31,9 +31,10 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`select`[]DIRECT`.*
+custom_proxy_group=🚀 代理`select`[]🇹🇼 TW`[]DIRECT`.*
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
+custom_proxy_group=🇹🇼 TW`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
