--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -36,12 +36,12 @@ ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀 代理`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🚀 代理`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=Ⓜ️ 微软`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=✈️ 电报`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=✈️ 电报`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🕊️ 推特`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♾️ 规则之外`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=♾️ 规则之外`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
