--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -15,32 +15,26 @@ ruleset=🎯 直连,[]GEOIP,CN,no-resolve
 ;🍎 苹果服务
 ruleset=🎯 直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ;======================================================================================================================
-;🎬 国外媒体
-ruleset=🎬 外媒,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-;✈️ 电报
-ruleset=✈️ 电报,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-;🕊️ 推特
-ruleset=🕊️ 推特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
-;Ⓜ️ 微软服务
-ruleset=Ⓜ️ 微软,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ;🧱 GFW列表。
-ruleset=🧱 GFW,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;🎬 国外媒体
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+;✈️ 电报
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+;🕊️ 推特
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
+;Ⓜ️ 微软服务
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ;📢 谷歌FCM。
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🚀 代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ;♾️ 规则之外
-ruleset=♾️ 规则之外,[]FINAL
+ruleset=🚀 代理,[]FINAL
 ;======================================================================================================================
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🧱 GFW`load-balance`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🎬 外媒`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=Ⓜ️ 微软`load-balance`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=✈️ 电报`load-balance`(韩国|KR|🇰🇷)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🕊️ 推特`load-balance`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=📢 谷歌FCM`load-balance`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=♾️ 规则之外`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🚀 代理`select`[]DIRECT
 custom_proxy_group=🎯 直连`select`[]DIRECT
 custom_proxy_group=🍃 净化`select`[]REJECT
 ;======================================================================================================================
