--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -2,7 +2,7 @@
 ;======================================================================================================================
 ;规则组
 ruleset=🎯,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Driect.list
-ruleset=🌎,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Specific.list
+ruleset=🚩,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Specific.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🍃,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -14,7 +14,7 @@ ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Appl
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=🌎,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=🚩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
@@ -25,11 +25,12 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]⚖️ Hash`[]🌎
-custom_proxy_group=🌎`select`.*
+custom_proxy_group=🚀`select`[]🇺🇸 Hash`[]🇨🇦 Hash`[]🚩
+custom_proxy_group=🚩`select`.*
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
-custom_proxy_group=⚖️ Hash`load-balance`.*`http://www.gstatic.com/generate_204`600,,
+custom_proxy_group=🇺🇸 Hash`load-balance`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,,
+custom_proxy_group=🇨🇦 Hash`load-balance`(加拿大|CA|🇨🇦)`http://www.gstatic.com/generate_204`600,,
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
