--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -1,15 +1,15 @@
 [custom]
 ;======================================================================================================================
 ;规则组
-ruleset=🎯,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Driect.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Driect.list
 ruleset=✈️,https://raw.githubusercontent.com/carl2018xy/Sub_C_Rules/main/Specific.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=🍃,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🍃,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=[]REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=[]REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=✈️,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
@@ -17,19 +17,18 @@ ruleset=✈️,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Mi
 ruleset=✈️,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=✈️,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯,[]GEOIP,CN,no-resolve
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=[]DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=[]DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]♻️
-custom_proxy_group=✈️`url-test`(^(?=.*(美国|US|🇺🇸))(?!.*EMO).*)`http://www.gstatic.com/generate_204`600,,
-custom_proxy_group=🎯`select`[]DIRECT
-custom_proxy_group=🍃`select`[]REJECT
-custom_proxy_group=♻️`url-test`.*`http://www.gstatic.com/generate_204`600,,
+custom_proxy_group=🚀`select`[]🇺🇳
+custom_proxy_group=✈️`select`[]🇺🇸
+custom_proxy_group=🇺🇳`url-test`.*`http://www.gstatic.com/generate_204`600,,
+custom_proxy_group=🇺🇸`url-test`(^(?=.*(美国|US|🇺🇸))(?!.*EMO).*)`http://www.gstatic.com/generate_204`600,,
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
