--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -26,7 +26,7 @@ ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
 custom_proxy_group=🚀`select`[]🇺🇳
-custom_proxy_group=✈️`select`[]🇺🇸
+custom_proxy_group=✈️`select`[]🇹🇼
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 custom_proxy_group=🇺🇳`url-test`.*`http://www.gstatic.com/generate_204`600,,
