--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -30,7 +30,7 @@ custom_proxy_group=✈️`select`[]🇺🇸
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 custom_proxy_group=🇺🇳`url-test`.*`http://www.gstatic.com/generate_204`600,2,100
-custom_proxy_group=🇹🇼`url-test`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇺🇸`url-test`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,2,100
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
