--- a/Cus_Rules.ini
+++ b/Cus_Rules.ini
@@ -25,12 +25,15 @@ ruleset=🎯,[]GEOIP,CN,no-resolve
 ruleset=🚀,[]FINAL
 ;======================================================================================================================
 ;控制组
-custom_proxy_group=🚀`select`[]🇭🇰`[]🇹🇼`[]🇺🇸`.*
+custom_proxy_group=🚀`select`[]🇭🇰`[]🇹🇼`[]🇺🇸`[]🇸🇬`[]🇨🇦`[]🇯🇵
 custom_proxy_group=🎯`select`[]DIRECT
 custom_proxy_group=🍃`select`[]REJECT
 custom_proxy_group=🇭🇰`url-test`(香港|HK|🇭🇰)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇹🇼`url-test`(台湾|TW|🇹🇼)`http://www.gstatic.com/generate_204`600,2,100
 custom_proxy_group=🇺🇸`url-test`(美国|US|🇺🇸)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇸🇬`url-test`(新加坡|SG|🇸🇬)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇨🇦`url-test`(加拿大|CA|🇨🇦)`http://www.gstatic.com/generate_204`600,2,100
+custom_proxy_group=🇯🇵`url-test`(日本|JP|🇯🇵)`http://www.gstatic.com/generate_204`600,2,100
 ;======================================================================================================================
 enable_rule_generator=true
 overwrite_original_rules=true
